# PGMBuilder

./: .gitmodules  Builder.cpp  Builder.hpp  CMakeLists.txt  CMakePresets.json  CustomData.cpp  CustomData.hpp  Ex.hpp  Image.cpp  Image.hpp  ImageCache.hpp  Log.cpp  Log.hpp  MameDB.cpp  MameDB.hpp  MameDBImport.cpp  MameGames.hpp  MameImage.cpp  MameImage.hpp  MameROMs.hpp  ProgramOptions.cpp  ProgramOptions.hpp  README.md  RawROM.hpp  RomAssembly.cpp  RomAssembly.hpp  TextEncoding.cpp  TextEncoding.hpp  WriteUtils.cpp  WriteUtils.hpp  bulkConvert.cpp  convert.cpp  convert.hpp  crypt.cpp  crypt.hpp  main.cpp  manualBuild.cpp  manualBuild.hpp  pgm.hpp
.github/workflows/: build.yml
crypt/: simple_decrypt.cpp  simple_decrypt.h
crypt/kov/: kov_asm.h  kov_asm.x68  kov_deprotect.cpp  kov_deprotect.hpp
crypt/kovsh/: kovsh_deprotect.cpp  kovsh_deprotect.hpp
crypt/orlegend/: orlegend_deprotect.cpp  orlegend_deprotect.hpp
